--- a/assets/styles/helpers.styl
+++ b/assets/styles/helpers.styl
@@ -1,14 +1,16 @@
 clear-button-defaults()
 	border 0
+	border-radius 0
 	background 0 0
 	outline 0
 	padding 0
 	font-family inherit
 	color inherit
 	cursor pointer
-	appearance none
+	-webkit-appearance none
+	-moz-appearance none
 
-	&::-moz-inner-focus
+	&::-moz-focus-inner
 		border 0
 
 size($width, $height = $width)
