--- a/assets/styles/index.styl
+++ b/assets/styles/index.styl
@@ -5,18 +5,76 @@
 html
 	font-family sans-serif
 	box-sizing border-box
+	overflow-x hidden
+
+html
+body
+	min-height 100vh
+
+body
+	position relative
+
+	font-family 'Noto Sans', sans-serif
+	font-size 16px
+
+	text-rendering optimizeLegibility
 	-ms-text-size-adjust 100%
 	-webkit-text-size-adjust 100%
 	-moz-osx-font-smoothing grayscale
 	-webkit-font-smoothing antialiased
+	-webkit-tap-highlight-color rgba(0,0,0,0)
 
-body
-	font-family "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif
-	font-size 16px
+svg
+img
+	display block
+
+img::selection
+	background transparent
+
+img
+video
+	-webkit-user-drag none
+
+address
+	font-style normal
 
 h1
-	font-size 42px
+	font-size 64px
 	text-align center
-	color #b1b1b1
-	margin-top 120px
+	color transparent
+	-webkit-text-stroke-width .04em
+	-webkit-text-stroke-color #fff
+	letter-spacing .01em
+	font-weight 700
 
+.container
+	position absolute
+	left 0
+	right 0
+	size 100%
+	padding-top 100px
+
+.button
+    max-width 100%
+    border 0
+    margin 0
+    padding 14px 20px 10px 20px
+    border-radius 0
+    outline none
+    overflow hidden
+
+    text-align center
+    text-transform uppercase
+    font-family inherit
+    white-space nowrap
+    text-decoration none
+    font-size 10px
+    font-weight 700
+
+    -moz-appearance none
+    -webkit-appearance none
+    cursor pointer
+    user-select none
+
+	&::-moz-focus-inner
+		border 0
