add page loader

--- a/assets/styles/global.styl
+++ b/assets/styles/global.styl
@@ -1,3 +1,10 @@
 @import screens
 @import variables
 @import helpers
+
+page-content()
+	position absolute
+	left 0
+	right 0
+	size 100%
+	padding-top 100px
