--- a/assets/styles/index.styl
+++ b/assets/styles/index.styl
@@ -16,6 +16,7 @@ body
 
 	font-family 'Noto Sans', sans-serif
 	font-size 16px
+	color #ffffff
 
 	text-rendering optimizeLegibility
 	-ms-text-size-adjust 100%
@@ -39,20 +40,22 @@ address
 	font-style normal
 
 h1
-	font-size 58px
+	font-size 62px
 	text-align center
 	color transparent
 	-webkit-text-stroke-width .04em
 	-webkit-text-stroke-color #fff
 	letter-spacing .01em
 	font-weight 700
+	opacity 0;
+	transform: translateY(60px) rotateY(-30deg) rotateX(-10deg) translateZ(0)
+	transition: transform .8s cubic-bezier(.165,.84,.44,1), opacity .8s cubic-bezier(.165,.84,.44,1)
+	transition-delay 2s
 
-.container
-	position absolute
-	left 0
-	right 0
-	size 100%
-	padding-top 100px
+	.isLoaded &
+		transform translateZ(0)
+		opacity 1
+		transition-delay 0s
 
 .button
     max-width 100%
