--- a/assets/styles/index.styl
+++ b/assets/styles/index.styl
@@ -16,7 +16,7 @@ body
 
 	font-family 'Noto Sans', sans-serif
 	font-size 16px
-	color #ffffff
+	color #1b608d
 
 	text-rendering optimizeLegibility
 	-ms-text-size-adjust 100%
@@ -36,26 +36,22 @@ img
 video
 	-webkit-user-drag none
 
+a
+	text-decoration none
+	background-color transparent
+	-webkit-text-decoration-skip object
+
 address
 	font-style normal
 
 h1
 	font-size 62px
 	text-align center
-	color transparent
-	-webkit-text-stroke-width .04em
-	-webkit-text-stroke-color #fff
+	// color transparent
+	// -webkit-text-stroke-width .04em
+	// -webkit-text-stroke-color #1b608d
 	letter-spacing .01em
 	font-weight 700
-	opacity 0;
-	transform: translateY(60px) rotateY(-30deg) rotateX(-10deg) translateZ(0)
-	transition: transform .8s cubic-bezier(.165,.84,.44,1), opacity .8s cubic-bezier(.165,.84,.44,1)
-	transition-delay 2s
-
-	.isLoaded &
-		transform translateZ(0)
-		opacity 1
-		transition-delay 0s
 
 .button
     max-width 100%
