add responsive mixins

--- a/assets/styles/global.styl
+++ b/assets/styles/global.styl
@@ -1,6 +1,9 @@
+@import adaptation
 @import screens
 @import variables
 @import helpers
+
+adaptation($screens)
 
 page-content()
 	position absolute
