--- a/assets/styles/index.styl
+++ b/assets/styles/index.styl
@@ -28,6 +28,12 @@ body
 	-webkit-font-smoothing antialiased
 	-webkit-tap-highlight-color rgba(0,0,0,0)
 
+
+.page
+
+	&_no-scroll
+		overflow hidden
+
 svg
 img
 	display block
