--- a/assets/styles/index.styl
+++ b/assets/styles/index.styl
@@ -8,7 +8,6 @@ responsive($screens)
 html
 	font-family sans-serif
 	box-sizing border-box
-	overflow-x hidden
 
 html
 body
@@ -21,6 +20,7 @@ body
 	font-size 16px
 	color #1b608d
 
+	overflow-x hidden
 	text-rendering optimizeLegibility
 	-ms-text-size-adjust 100%
 	-webkit-text-size-adjust 100%
@@ -28,11 +28,8 @@ body
 	-webkit-font-smoothing antialiased
 	-webkit-tap-highlight-color rgba(0,0,0,0)
 
-
-.page
-
-	&_no-scroll
-		overflow hidden
+.app_no-scroll
+	overflow-y hidden
 
 svg
 img
