--- a/assets/styles/index.styl
+++ b/assets/styles/index.styl
@@ -21,6 +21,7 @@ body
 	font-family 'Noto Sans', Helvetica, Arial, sans-serif
 	font-size 16px
 	color #1b608d
+	background-color #ffffff
 	overflow-x hidden
 	text-rendering optimizeLegibility
 	-ms-text-size-adjust 100%
